tests/baselines/reference/parserEqualsGreaterThanAfterFunction1.errors.txt
//// [tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction1.ts] ////

parserEqualsGreaterThanAfterFunction1.ts(1,10): error TS1003: Identifier expected.


==== parserEqualsGreaterThanAfterFunction1.ts (1 errors) ====
    function =>
             ~~
!!! error TS1003: Identifier expected.